llmx-rs/tui/src/bottom_pane/snapshots/llmx_tui__bottom_pane__chat_composer__tests__footer_mode_esc_hint_backtrack.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› Ask LLMX to do anything                                                                           "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  esc again to edit previous message                                                                "
