llmx-rs/tui/src/bottom_pane/snapshots/llmx_tui__bottom_pane__chat_composer__tests__footer_mode_shortcut_overlay.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› Ask LLMX to do anything                                                                           "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  / for commands                            shift + enter for newline                               "
"  @ for file paths                          ctrl + v to paste images                                "
"  esc again to edit previous message        ctrl + c to exit                                        "
"                                            ctrl + t to view transcript                             "
